[package]
name = "secret-rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
tokio-test = "*" 
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
bech32 = "0.9.0"
color-eyre = "0.6"
rand_core = "0.5"
x25519-dalek = "1"
base64 = "0.13.0"
hkdf = "0.12.3"
sha2 = { version = "0.10", default-features = false }
hex-literal = "0.2.2"
aes-siv = "0.7.0"

[dev-dependencies]
