[package]
name = "secret-rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
tokio-test = "*" 
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
bech32 = "0.9.0"
regex = "1" # regular expressions support
lazy_static = "1.4.0"
num-bigint = "0.4.3"
[dev-dependencies]
